--- a/.github/ISSUE_TEMPLATE/public-feat-form.yml
+++ b/.github/ISSUE_TEMPLATE/public-feat-form.yml
@@ -14,7 +14,7 @@ body:
     id: feature-request
     attributes:
       label: How would you improve BER?
-      description: We try to bring out the best from this system. If you have ideas we are happy to hear from you!
+      description: We try to bring out the best from this system. If you have ideas we are happy to hear from you! (Submit attachments, videos, screenshots to help us understand your issue.)
       placeholder: This is my great idea!
       value: |
         Brief overview:
@@ -26,7 +26,7 @@ body:
   - type: textarea
     id: logs
     attributes:
-      label: Relevant screenshots, videos, log output, etc.
+      label: Relevant log output, code example etc.
       description: Please copy and paste any relevant log output. (This will be automatically formatted into code, so no need for backticks.)
       render: shell
     validations:
@@ -35,7 +35,7 @@ body:
     id: terms
     attributes:
       label: Accept BER Code of Conduct
-      description: By submitting this issue, you agree to follow our [Code of Conduct](https://https://github.com/berbyte/ber-os/).
+      description: By submitting this issue, you agree to follow our [Code of Conduct](https://https://github.com/berbyte/ber-os/blob/main/.github/CODE_OF_CONDUCT.md).
       options:
         - label: I agree to follow this project's Code of Conduct
           required: true
